syntax = "proto3";
package management;

message RemoveTypesRequest {
	repeated string type_names = 1;
}

message RemoveTypesResponse {}
